[package]
name = "technopolis-be"
version = "0.1.0"
license = "AGPL-3.0"
authors = ["silverscat-3 <silverscat_3@mail.sc3.fun>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
docopt = "1"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
postgres = "0.17"
refinery = { version = "0.3", features = ["postgres"] }
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "postgres", "chrono", "macros", "time", "json" ] }
activitystreams = "0.7.0-alpha.3"
rust-argon2 = "0.8"
paseto = "1.0"
ulid = "0.4"
